--- a/ui/imodel-components/src/ui-imodel-components/color/ColorPickerPanel.scss
+++ b/ui/imodel-components/src/ui-imodel-components/color/ColorPickerPanel.scss
@@ -15,7 +15,7 @@ $saturation-hue-height: 150px;
     display: flex;
     flex-direction: row;
     height: 100%;
-    column-gap: 20px;
+    gap: 10px;
 
     .components-colorpicker-saturation {
       margin: 1em;
