--- a/ui/imodel-components/src/ui-imodel-components/color/AlphaSlider.scss
+++ b/ui/imodel-components/src/ui-imodel-components/color/AlphaSlider.scss
@@ -2,12 +2,14 @@
 * Copyright (c) Bentley Systems, Incorporated. All rights reserved.
 * See LICENSE.md in the project root for license terms and full copyright notice.
 *--------------------------------------------------------------------------------------------*/
+@import "~@bentley/ui-core/lib/ui-core/style/themecolors";
+
 .components-alpha-pointer {
   position: absolute;
-  width: 1.2rem;
-  height: 1.2rem;
-  border-radius: 50%;
-  background-color: rgb(248, 248, 248);
+  width: 0.75em;
+  height: 0.75em;
+  border-radius: 1em;
+  border: 2px solid var(--buic-inputs-border);
   box-shadow: rgba(0, 0, 0, 0.37) 0px 1px 4px 0px;
 
   &:focus {
@@ -18,10 +20,9 @@
 
 .components-alpha-container-horizontal {
   width: 100%;
-  height: 1rem;
+  height: 12px;
   display: flex;
   align-items: center;
-  justify-content: center;
 
   .components-alpha-slider {
     position: relative;
@@ -30,8 +31,9 @@
     background-color: linear-gradient(to right, rgba(47, 37, 72, 0) 0%, rgb(47, 37, 72) 100%);
     background-image: url('data:image/svg+xml, <svg xmlns="http://www.w3.org/2000/svg" width="400" height="400" fill-opacity=".15"><rect x="200" width="200" height="200" /> <rect y="200" width="200" height="200" /></svg>'),
       linear-gradient(to right, rgba(47, 37, 72, 0) 0%, rgb(47, 37, 72) 100%);
-    background-size: 2rem 1rem, cover;
+    background-size: 0.85rem 0.5rem, cover;
     background-repeat: repeat, no-repeat;
+    border-radius: 1em;
 
     .components-alpha-pointer {
       transform: translate(-.6rem, -.1rem);
@@ -53,7 +55,7 @@
     background-color: linear-gradient(to bottom, rgba(47, 37, 72, 0) 0%, rgb(47, 37, 72) 100%);
     background-image: url('data:image/svg+xml, <svg xmlns="http://www.w3.org/2000/svg" width="400" height="400" fill-opacity=".15"><rect x="200" width="200" height="200" /> <rect y="200" width="200" height="200" /></svg>'),
       linear-gradient(to top, rgba(47, 37, 72, 0) 0%, rgb(47, 37, 72) 100%);
-    background-size: 1rem 2rem, cover;
+    background-size: .5rem 0.85rem, cover;
     background-repeat: repeat, no-repeat;
 
     .components-alpha-pointer {
