Separate ColorPickerPanel child components into separate files.

--- a/ui/imodel-components/src/imodel-components-react/color/AlphaSlider.scss
+++ b/ui/imodel-components/src/imodel-components-react/color/AlphaSlider.scss
@@ -36,7 +36,7 @@
     border-radius: 1em;
 
     .components-alpha-pointer {
-      transform: translate(-.6rem, -.1rem);
+      transform: translateX(-.6rem);
     }
   }
 }
