--- a/ui/imodel-components/src/imodel-components-react/color/ColorPickerPanel.scss
+++ b/ui/imodel-components/src/imodel-components-react/color/ColorPickerPanel.scss
@@ -50,7 +50,6 @@ $saturation-hue-height: 150px;
   width: 100%;
   height: 100%;
   padding-top: 10px;
-  margin-top: 10px;
   margin-bottom: 10px;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
@@ -84,15 +83,28 @@ $saturation-hue-height: 150px;
   flex-direction: row;
   align-items: center;
   justify-content: space-evenly;
+  gap: 4px;
 
   .components-colorpicker-input-value-wrapper {
     align-items: center;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     gap: 4px;
 
-    .uicore-inputs-labeled-input {
-      text-align: right;
+    &.reversed {
+      flex-direction: column-reverse;
+    }
+
+    .uicore-inputs-input-label-and-mode-toggle {
+      display: flex;
+      flex-direction: row;
+      gap: 2px;
+      align-items: center;
+    }
+
+    .uicore-inputs-input-label {
+      text-align: center;
+      user-select: none;
       margin: 0;
     }
 
