add focus drop shadow

--- a/ui/imodel-components/src/imodel-components-react/color/Swatch.scss
+++ b/ui/imodel-components/src/imodel-components-react/color/Swatch.scss
@@ -3,6 +3,7 @@
 * See LICENSE.md in the project root for license terms and full copyright notice.
 *--------------------------------------------------------------------------------------------*/
 @import "~@itwin/core-react/lib/cjs/core-react/style/themecolors";
+@import "~@itwin/core-react/lib/cjs/core-react/inputs/variables";
 @import "~@itwin/itwinui-css/scss/style/typography";
 
 .components-color-swatch {
@@ -20,5 +21,9 @@
 
   &[disabled] {
     opacity: .2;
+  }
+
+  &:hover {
+    box-shadow: $uicore-inputs-focus-boxshadow;
   }
 }
